fixing section titles on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -232,10 +232,8 @@ footer {
       }
     }
   }
-  #about {
-    .unhackathon-pic img {
-      height: 90%;
-      width: 90%;
-    }
+  
+  .section-title {
+    font-size: 20px;
   }
 }
